Add mdx support, other enhancements

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -3,13 +3,9 @@ layout: ../layouts/main.astro
 title: Home
 ---
 
-<div class="px-4 py-5 my-5 text-center">
-	<img class="d-block mx-auto mb-4" src="/logo180.png" alt="WTRBC" width="180" height="180">
-	<h1 class="display-5 fw-bold text-body-emphasis">Western Thrianta Rabbit Breeders Club</h1>
-	<div class="col-lg-6 mx-auto">
-		<p class="lead mb-4">Welcome to the World of American Thrianta Rabbits!</p>
-	</div>
-</div>
+import Hero from "../components/Hero.astro";
+
+<Hero />
 
 ## About Us
 
@@ -43,14 +39,6 @@ Stay tuned for our upcoming events, including:
 Ready to become a part of the WTRBC community? Join us today and embark on a journey of rabbit companionship and knowledge.
 
 [Join Now](#) | [Contact Us](#)
-
-## Resources
-
-Explore helpful resources for Thrianta rabbit enthusiasts:
-
-- **Care Guidelines:** Learn how to provide the best care for your Thrianta rabbit.
-- **Breeding Tips:** Tips and tricks for successful Thrianta rabbit breeding.
-- **Health & Wellness:** Keep your rabbits happy and healthy with our wellness guides.
 
 ## Connect With Us
 
